impr(java): implement logging, minor bugfixes